@@ -1,4 +1,5 @@
 ????-??-??:  Version ?.?.?
+- Add functions to open directories/files from already open directory.
 - Fix possible memory corruption with inline files.
 - Improve error resilience and stability.
 - Add support for Volume Descriptor Pointer.
